# proxycast

./: .gitignore  RELEASE_NOTES.md  WINDOWS_CRASH_ANALYSIS.md  WINDOWS_TEST_GUIDE.md  package-lock.json  package.json  test-crash-fix.md  test-messaging.sh  vite.config.ts
.github/workflows/: release.yml
docs/: product-overview.md
docs/prd/: connect-test.html
docs/testing/: skills-e2e-testing.md
extensions/proxycast-chrome/: README.md  background.js  content_script.js  manifest.json  popup.html  popup.js
scripts/: check-chrome-bridge.mjs  chrome-bridge-e2e.mjs  test-chrome-bridge.mjs  test-ws-connection.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.headless.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/credential/: Cargo.toml
src-tauri/crates/credential/src/: balancer.rs  lib.rs  quota.rs  sync.rs
src-tauri/crates/server-utils/: Cargo.toml
src-tauri/crates/server-utils/src/: lib.rs
src-tauri/src/: README.md  dev_bridge.rs  lib.rs  logger.rs  server.rs  server_utils.rs
src-tauri/tests/: api_key_provider_tests.proptest-regressions
src/components/: AppSidebar.tsx  Providers.tsx  README.md  Sidebar.tsx
src/hooks/: README.md  index.ts  useConnectCallback.ts  useMaterials.ts  useMcp.ts  usePersonas.ts  useProject.ts  useProjectContext.ts  useProjects.ts  useRelayRegistry.ts  useSkillExecution.ts  useSkills.ts  useSubAgentScheduler.ts  useSwitch.ts  useTauri.ts  useTemplates.ts  useThreeStageWorkflow.ts
src/lib/: resourceProjectSelection.ts  webview-api.ts
src/types/: context.ts  index.ts  page.ts  (+6 more)
(+537 files in other folders)
