[package]
name = "proxycast-credential"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
proxycast-core.workspace = true
proxycast-infra.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 异步运行时
tokio.workspace = true

# 日志
tracing.workspace = true

# HTTP 服务器（AllCredentialsExhaustedError 的 IntoResponse）
axum.workspace = true

# HTTP 客户端
reqwest.workspace = true

# 时间
chrono.workspace = true

# 并发
dashmap.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
