[package]
name = "proxycast-server-utils"
version.workspace = true
edition.workspace = true

[dependencies]
proxycast-core = { path = "../core" }
serde_json = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
